load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nbd",
    srcs = [
        "doc.go",
        "handshake.go",
        "netlink.go",
        "transmission.go",
        "types.go",
    ],
    importpath = "github.com/Merovius/nbd",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//nbdnl",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//nbdnl",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
