load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nbdnl",
    srcs = ["nbd.go"],
    importpath = "github.com/Merovius/nbd/nbdnl",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_mdlayher_genetlink//:go_default_library",
            "@com_github_mdlayher_netlink//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_mdlayher_genetlink//:go_default_library",
            "@com_github_mdlayher_netlink//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
