load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nbd_lib",
    srcs = [
        "connect.go",
        "disc.go",
        "list.go",
        "lo.go",
        "nbd.go",
        "serve.go",
        "stat_other.go",
        "stat_unix.go",
    ],
    importpath = "github.com/Merovius/nbd/cmd/nbd",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_subcommands//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//:nbd",
            "//nbdnl",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//:nbd",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//:nbd",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//:nbd",
            "//nbdnl",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//:nbd",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//:nbd",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "nbd",
    embed = [":nbd_lib"],
    visibility = ["//visibility:public"],
)
